[package]
name = "crebito-ntex"
version = "0.1.0"
edition = "2021"

[dependencies]
ntex = { version = "1.1.0", features = ["tokio"] }
ntex-bytes = { version = "0.1.21", features = ["simd"] }
buf-min = { version = "0.7", features = ["ntex-bytes"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
simd-json = "0.13.8"
snmalloc-rs = "0.3.4"
tok_io = { version = "1", package = "tokio", features = ["full"] }
validator = { version = "0.16.1", features = ["derive"] }
tokio-postgres = { version = "0.7.10", features = ["with-serde_json-1"]}
regex = "1.10.3"
num_cpus = "1.16.0"

[profile.release]
opt-level = 3
codegen-units = 1
panic = 'abort'
lto = "thin"
debug = false
incremental = false
overflow-checks = false
